# tensorlogic

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  IMPACT.md  README.md  SCIRS2_INTEGRATION_POLICY.md  SECURITY.md  TODO.md  TUTORIAL.md
crates/tensorlogic/: Cargo.toml  README.md  TODO.md
crates/tensorlogic-adapters/: CHANGELOG.md  Cargo.toml  QA_REPORT.md  README.md  RELEASE_NOTES.md  TODO.md
crates/tensorlogic-adapters/benches/: README.md  database_benchmarks.rs  incremental_validation_benchmarks.rs  merge_strategies_benchmarks.rs  query_cache_benchmarks.rs  query_planner_benchmarks.rs  refinement_benchmarks.rs  schema_evolution_benchmarks.rs  symbol_table_benchmarks.rs  synchronization_benchmarks.rs  utilities_benchmarks.rs
crates/tensorlogic-adapters/examples/: 01_symbol_table_basics.rs  02_domain_hierarchy.rs  03_parametric_types.rs  04_predicate_composition.rs  05_metadata_provenance.rs  06_signature_matching.rs  07_schema_analysis.rs  08_schema_builder.rs  09_product_domains.rs  10_computed_domains.rs  11_lazy_loading.rs  12_comprehensive_integration.rs  13_advanced_integration.rs  14_advanced_type_system.rs  15_compiler_integration.rs  16_graphql_codegen.rs  17_code_generation_suite.rs  18_embeddings_similarity.rs  19_autocompletion_demo.rs  20_database_backends.rs  21_schema_learning.rs  22_schema_recommendations.rs  23_concurrent_schema_access.rs  24_distributed_synchronization.rs  25_query_caching.rs  26_schema_merging.rs
crates/tensorlogic-adapters/src/: autocompletion.rs  axis.rs  builder.rs  codegen.rs  compact.rs  compiler_integration.rs  composition.rs  computed.rs  constraint.rs  database.rs  database_tests.rs  dependent.rs  diff.rs  domain.rs  effects.rs  embeddings.rs  error.rs  evolution.rs  hierarchy.rs  incremental_validation.rs  lazy.rs  learning.rs  lib.rs  linear.rs  locking.rs  mask.rs  merge_strategies.rs  metadata.rs  parametric.rs  performance.rs  predicate.rs  product.rs  query_cache.rs  query_planner.rs  recommendation.rs  refinement.rs  schema_analysis.rs  signature_matcher.rs  symbol_table.rs  synchronization.rs  (+3 more)
crates/tensorlogic-adapters/tests/: integration_tests.rs  proptest_validation.proptest-regressions  proptest_validation.rs
crates/tensorlogic-cli/: COMPLIANCE_REPORT.md  Cargo.toml  ENHANCEMENTS.md  FFI_README.md  README.md  TODO.md  TUTORIAL.md  tensorlogic.h
crates/tensorlogic-cli/benches/: cli_performance.rs
crates/tensorlogic-cli/ci-examples/: Jenkinsfile  README.md  github-actions.yml  gitlab-ci.yml
crates/tensorlogic-cli/docs/: COOKBOOK.md  tensorlogic.1
crates/tensorlogic-cli/examples/: 01_backend_comparison.sh  01_basic_compilation.rs  02_optimization_pipeline.sh  02_quantifiers.rs  03_compilation_strategies.rs  03_repl_workflow.sh  04_complete_pipeline.sh  04_graph_analysis.rs  05_optimization.rs  EXAMPLES.md  LIBRARY_EXAMPLES.md  README.md  access_control.tl  data_validation.tl  graph_analysis.tl  library_advanced.rs  library_basic.rs  library_conversion.rs  library_macros.rs  recommendation.tl  social_network.tl
crates/tensorlogic-cli/python/: tensorlogic_ffi.py
crates/tensorlogic-cli/scripts/: README.md  tlc-wrapper.sh
crates/tensorlogic-cli/src/: analysis.rs  batch.rs  benchmark.rs  cache.rs  cli.rs  completion.rs  config.rs  conversion.rs  error_suggestions.rs  executor.rs  ffi.rs  lib.rs  macros.rs  main.rs  optimize.rs  output.rs  parser.rs  profile.rs  repl.rs  simplify.rs  snapshot.rs  watch.rs
crates/tensorlogic-cli/tests/: cli_integration.rs  end_to_end.rs  executor_integration.rs  integration_tests.rs
crates/tensorlogic-compiler/: Cargo.toml  README.md  TODO.md  TUTORIAL.md
crates/tensorlogic-compiler/benches/: compilation_performance.rs  optimization_performance.rs
crates/tensorlogic-compiler/examples/: 04_compiler_new_operations.rs  05_optimizations.rs  06_optimization_pipeline.rs  07_metadata_propagation.rs  08_caching_and_metadata.rs  09_incremental_compilation.rs  10_modal_temporal_logic.rs  11_fuzzy_logic.rs  12_advanced_optimizations.rs  13_optimization_profiling.rs  14_parallel_compilation.rs  15_onnx_export.rs  16_tensorflow_export.rs  17_pytorch_export.rs  18_logic_import.rs  19_set_operations.rs  20_constraint_programming.rs  21_profiling_and_optimization.rs  22_hybrid_logic.rs  23_abductive_reasoning.rs
crates/tensorlogic-compiler/fuzz/: Cargo.toml  README.md
crates/tensorlogic-compiler/src/: cache.rs  config.rs  context.rs  debug.rs  incremental.rs  lib.rs  parallel.rs  profiling.rs  property_tests.rs  tests.rs  tests_math_ops.rs
crates/tensorlogic-compiler/tests/: adapter_integration.rs  end_to_end.rs
crates/tensorlogic-infer/: BACKEND_TUTORIAL.md  Cargo.toml  PERFORMANCE_GUIDE.md  README.md  TODO.md  TRAIT_GUIDE.md
crates/tensorlogic-infer/benches/: execution_benchmarks.rs
crates/tensorlogic-infer/examples/: distributed_demo.rs  jit_demo.rs  recovery_demo.rs
crates/tensorlogic-infer/src/: async_exec.rs  auto_parallel.rs  autodiff.rs  backend_tests.rs  batch.rs  cache.rs  cache_optimizer.rs  capabilities.rs  compilation.rs  context.rs  debug.rs  diagnostics.rs  distributed.rs  dummy_executor.rs  dummy_tensor.rs  dynamic_batching.rs  eager.rs  error.rs  fusion.rs  (+33 more)
crates/tensorlogic-ir/: Cargo.toml  README.md  RELEASE_NOTES_ALPHA_2.md  TODO.md
crates/tensorlogic-oxirs-bridge/: Cargo.toml  README.md  TODO.md
crates/tensorlogic-py/: COMPLIANCE_REPORT.md  Cargo.toml  ENHANCEMENTS.md  Makefile  PACKAGING.md  QUICKSTART.md  README.md  SESSION2_ENHANCEMENTS.md  SESSION4_SUMMARY.md  SESSION8_SUMMARY.md  TODO.md  mypy.ini  pyproject.toml  pytensorlogic.pyi  pytest.ini  requirements-dev.txt
crates/tensorlogic-quantrs-hooks/: Cargo.toml  README.md  TODO.md
crates/tensorlogic-scirs-backend/: Cargo.toml  README.md  TODO.md
crates/tensorlogic-sklears-kernels/: Cargo.toml  README.md  TODO.md
crates/tensorlogic-train/: Cargo.toml  PERFORMANCE.md  QUALITY_REPORT.md  README.md  TODO.md
crates/tensorlogic-trustformers/: Cargo.toml  README.md  TODO.md
tools/bench-tracker/: Cargo.toml  README.md
(+547 files in other folders)
