[package]
name = "tensorlogic-adapters"
version = "0.1.0-alpha.1"
description = "Symbol tables, axis metadata, and domain masks for TensorLogic"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tensorlogic-ir.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
indexmap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bincode.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "symbol_table_benchmarks"
harness = false

[[bin]]
name = "schema_validate"
path = "src/bin/schema_validate.rs"

[[bin]]
name = "schema_migrate"
path = "src/bin/schema_migrate.rs"
