[package]
name = "tensorlogic-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "TensorLogic command-line interface for compiling logical expressions to tensor graphs"
keywords = ["logic", "tensor", "compiler", "cli"]
categories = ["command-line-utilities", "compilers"]

[[bin]]
name = "tensorlogic"
path = "src/main.rs"

#[[bin]]
#name = "tlc"
#path = "src/main.rs"

[dependencies]
tensorlogic-ir.workspace = true
tensorlogic-compiler.workspace = true
tensorlogic-scirs-backend.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde = { workspace = true, features = ["derive"] }
toml = "0.9"
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
clap_complete = "4.5"
rustyline = "17.0"
colored = "3.0"
notify = "8.2"
indicatif = "0.18"
dirs = "6.0"
chrono = "0.4"
