[package]
name = "tensorlogic-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "TensorLogic command-line interface and library for compiling logical expressions to tensor graphs"
keywords = ["logic", "tensor", "compiler", "cli"]
categories = ["command-line-utilities", "compilers"]

[lib]
name = "tensorlogic_cli"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "tensorlogic"
path = "src/main.rs"

#[[bin]]
#name = "tlc"
#path = "src/main.rs"

[dependencies]
tensorlogic-ir.workspace = true
tensorlogic-compiler.workspace = true
tensorlogic-infer.workspace = true
tensorlogic-scirs-backend.workspace = true
tensorlogic-adapters.workspace = true
scirs2-core.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true
toml.workspace = true
clap.workspace = true
clap_complete.workspace = true
rustyline.workspace = true
colored.workspace = true
notify.workspace = true
indicatif.workspace = true
dirs.workspace = true
chrono.workspace = true
num_cpus.workspace = true
oxicode.workspace = true
flate2.workspace = true
rayon.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
criterion.workspace = true

[features]
# Future features for SIMD and GPU support
simd = []
gpu = []
