[package]
name = "tensorlogic-infer"
version.workspace = true
description = "Execution and autodiff traits for TensorLogic inference engines"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
tensorlogic-ir.workspace = true
num_cpus = "1.17.0"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.49", features = ["sync", "time", "macros", "rt-multi-thread"], optional = true }

[features]
default = []
async = ["tokio"]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "execution_benchmarks"
harness = false
