[package]
name = "tensorlogic-ir"
version = "0.1.0-alpha.2"
description = "Intermediate representation (IR) and AST types for TensorLogic"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
