[package]
name = "tensorlogic-ir"
version.workspace = true
description = "Intermediate representation (IR) and AST types for TensorLogic"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
oxicode.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
