[package]
name = "tensorlogic-oxirs-bridge"
version.workspace = true
description = "RDF/GraphQL/SHACL integration and provenance tracking for TensorLogic"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tensorlogic-ir.workspace = true
tensorlogic-adapters.workspace = true
tensorlogic-compiler.workspace = true

# OxiRS integration - RDF/Knowledge Graph/SPARQL
oxirs-core.workspace = true
oxirs-gql.workspace = true
oxirs-ttl.workspace = true

# Low-level RDF types (for compatibility with existing code)
oxrdf = "0.3.2"
oxttl = "0.2.2"

# Random number generation
scirs2-core = { workspace = true, features = ["random"] }

# Utilities
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
approx.workspace = true

[[bench]]
name = "parsing_benchmarks"
harness = false
