[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pytensorlogic"
version = "0.1.0a1"
description = "Python bindings for TensorLogic - Logic-as-tensor planning layer"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "KitaSan", email = "info@kitasan.io"}
]
maintainers = [
    {name = "KitaSan", email = "info@kitasan.io"}
]
keywords = ["logic", "tensor", "einsum", "reasoning", "neural-symbolic", "ai", "machine-learning", "knowledge-graph", "rdf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/cool-japan/tensorlogic"
Repository = "https://github.com/cool-japan/tensorlogic"
Documentation = "https://github.com/cool-japan/tensorlogic/blob/main/README.md"

[tool.maturin]
features = ["pyo3/extension-module"]
# python-source = "python"  # Not needed for pure Rust extension
# Multi-platform wheel configuration
strip = true  # Strip debug symbols for smaller wheels
# Note: sdist disabled due to workspace path dependencies - users can install from git
include = ["pytensorlogic.pyi", "README.md", "examples/**/*", "tests/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F401", "F811"]
