[package]
name = "tensorlogic-quantrs-hooks"
version.workspace = true
description = "Probabilistic graphical model and message-passing interoperability for QuantRS2"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono = "0.4"
tensorlogic-ir.workspace = true
tensorlogic-compiler.workspace = true
tensorlogic-infer.workspace = true
scirs2-core = { workspace = true, features = ["random"] }
rayon = "1.11"

# QuantRS2 integration - Quantum computing & probabilistic inference
quantrs2-core.workspace = true
quantrs2-circuit.workspace = true
quantrs2-sim.workspace = true

[dev-dependencies]
approx = "0.5"
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "inference_algorithms"
harness = false

[[bench]]
name = "factor_operations"
harness = false

[[bench]]
name = "message_passing"
harness = false
