[package]
name = "tensorlogic-scirs-backend"
version = "0.1.0-alpha.1"
description = "SciRS2-powered tensor execution backend for TensorLogic"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["cpu"]
cpu = []
simd = ["cpu", "scirs2-core/simd", "scirs2-linalg/simd"]
gpu = []
parallel = ["scirs2-core/parallel"]
# Enable integration tests that require tensorlogic-compiler (creates circular dev-dependency)
integration-tests = []

[dependencies]
tensorlogic-infer.workspace = true
tensorlogic-ir.workspace = true
scirs2-core.workspace = true
scirs2-linalg = { workspace = true, features = ["tensor_contraction"] }
anyhow.workspace = true
thiserror.workspace = true
serde_json.workspace = true

[dev-dependencies]
# tensorlogic-compiler.workspace = true  # Disabled: circular dev-dependency
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "forward_pass"
harness = false

[[bench]]
name = "simd_comparison"
harness = false

[[bench]]
name = "memory_footprint"
harness = false

[[bench]]
name = "gradient_stability"
harness = false

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "parallel_performance"
harness = false
