[package]
name = "tensorlogic-train"
version = "0.1.0-alpha.2"
description = "Training loops, loss composition, and optimization schedules for TensorLogic"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Core tensorlogic crates
tensorlogic-ir.workspace = true
tensorlogic-infer.workspace = true
tensorlogic-scirs-backend.workspace = true

# SciRS2 dependencies for training
scirs2-core.workspace = true
scirs2-autograd.workspace = true
scirs2-optimize.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Data structures
indexmap.workspace = true

# Logging
log.workspace = true
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

# Serialization (for checkpoints)
serde.workspace = true
serde_json.workspace = true

# Compression for checkpoints
flate2 = "1.1"

# Time for TensorBoard timestamps
chrono = "0.4"

# CRC for TensorBoard event format
crc32fast = "1.5"

# Byte order utilities
byteorder = "1.5"

# Hostname for TensorBoard filenames
hostname = "0.4"

[features]
default = []
structured-logging = ["tracing", "tracing-subscriber"]

[dev-dependencies]
criterion = "0.7"
approx = "0.5"

[[bench]]
name = "training_performance"
harness = false

[[bench]]
name = "scheduler_performance"
harness = false

[[bench]]
name = "loss_performance"
harness = false

[[bench]]
name = "callback_overhead"
harness = false

[[bench]]
name = "metrics_performance"
harness = false
