[package]
name = "tensorlogic-trustformers"
version = "0.1.0-alpha.2"
description = "Transformer-as-rules: Self-attention and FFN layers as einsum expressions"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tensorlogic-ir.workspace = true
tensorlogic-infer.workspace = true

# SciRS2 integration for tensor operations
scirs2-core = { workspace = true }

[dev-dependencies]
approx.workspace = true
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "model_benchmarks"
harness = false
